--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
+# Top level build folder (in modules separate .gitignore files should be used)
 /build
+ 
+# Android Studio project files
+*.iml
+.idea
+ 
+# Local configuration file (sdk path, etc)
+/local.properties
+ 
+# Android Studio captures folder
 /captures
+ 
+# Windows files
+Thumbs.db
+ 
+# Mac OS X files
+.DS_Store
