--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+//    lintOptions {
+//        disable 'InvalidPackage'
+//    }
 }
 
 dependencies {
@@ -51,4 +54,7 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.0'
     compile 'com.google.dagger:dagger:2.0'
     provided 'javax.annotation:jsr250-api:1.0'
+
+    //ButterKnife
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
