--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".database.CitiesProvider"
+            android:authorities="ru.whalemare.weather.database.CitiesProvider"
+            android:exported="true"
+            android:multiprocess="true" >
+        </provider>
+
     </application>
 
 </manifest>
