Chart working now with random int-value * added activity for chart * init chartview class -> "LineView" * added material icon .xml * added menu for chart

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".activity.ForecastActivity">
         </activity>
-
         <activity android:name=".activity.CityActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -29,6 +28,8 @@
             android:exported="false">
         </provider>
 
+        <activity android:name=".activity.ChartActivity">
+        </activity>
     </application>
 
 </manifest>
